# Fast-SCNN-pytorch-for-Silicon-M

./: .gitignore  README.md  auto_eval.py  combine_pic.py  demo.py  eval.py  pyproject.toml  requirements.txt  train.py
data_loader/: __init__.py  cityscapes.py
models/: fast_scnn.py
utils/: loss.py  lr_scheduler.py  metric.py
