[project]
name = "fast-scnn-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.3.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.15.0",
    "tqdm>=4.60.0",
]
